Add Crop Extension Module I and III

--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -4052,7 +4052,7 @@
   "skill.cropProcessorUnit.buff": "-5% Wachstumszeit der Crop Machine",
   "skill.oilExtraction": "+1 Öl beim Sammeln aus Reserven",
   "skill.leakProofTank": "Dreifaches Öltankvolumen in der Erntemaschine",
-  "skill.cropExtensionModule": "Erlauben Sie die Verwendung von Karotten- und Kohlsamen in der Erntemaschine",
+  "skill.cropExtensionModuleII": "Erlauben Sie die Verwendung von Karotten- und Kohlsamen in der Erntemaschine",
   "skill.rapidRig.buff": "-20% Wachstumszeit der Crop Machine",
   "skill.oilBeBack": "-20% Ölnachfüllzeit",
   "skill.fieldExtensionModule": "+5 Grundstücke zur Maschine hinzugefügt",
