--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -4052,7 +4052,7 @@
   "skill.cropProcessorUnit.buff": "-5% de tiempo de crecimiento de Crop Machine",
   "skill.oilExtraction": "+1 de aceite al recogerlo de las reservas",
   "skill.leakProofTank": "Capacidad de tanque de aceite triple en la máquina de cultivo",
-  "skill.cropExtensionModule": "Permita que las semillas de zanahoria y repollo se usen en la máquina de cultivo",
+  "skill.cropExtensionModuleII": "Permita que las semillas de zanahoria y repollo se usen en la máquina de cultivo",
   "skill.rapidRig.buff": "-20% de tiempo de crecimiento de Crop Machine",
   "skill.oilBeBack": "-20% de tiempo de recarga de aceite",
   "skill.fieldExtensionModule": "+5 parcelas añadidas a la máquina",
