--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -4052,7 +4052,7 @@
   "skill.cropProcessorUnit.buff": "-5% Waktu pertumbuhan Mesin Tanaman",
   "skill.oilExtraction": "+1 Minyak saat mengumpulkan dari cadangan",
   "skill.leakProofTank": "Kapasitas tangki minyak tiga kali lipat dalam mesin tanaman",
-  "skill.cropExtensionModule": "Biarkan biji Wortel dan Kubis digunakan dalam mesin tanaman",
+  "skill.cropExtensionModuleII": "Biarkan biji Wortel dan Kubis digunakan dalam mesin tanaman",
   "skill.rapidRig.buff": "-20% Waktu pertumbuhan Mesin Tanaman",
   "skill.oilBeBack": "-20% Waktu isi ulang minyak",
   "skill.fieldExtensionModule": "+5 plot ditambahkan ke mesin",
