--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -4052,7 +4052,7 @@
   "skill.cropProcessorUnit.buff": "-5% Mahsul Makinesi büyüme süresi",
   "skill.oilExtraction": "Rezervlerden toplanırken +1 Petrol",
   "skill.leakProofTank": "Mahsul makinesinde üçlü yağ tankı kapasitesi",
-  "skill.cropExtensionModule": "Havuç ve Lahana tohumlarının mahsul makinesinde kullanılmasına izin verin",
+  "skill.cropExtensionModuleII": "Havuç ve Lahana tohumlarının mahsul makinesinde kullanılmasına izin verin",
   "skill.rapidRig.buff": "-20% Mahsul Makinesi büyüme süresi",
   "skill.oilBeBack": "-20% Yağ dolum süresi",
   "skill.fieldExtensionModule": "Makineye +5 arsa eklendi",
