--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -4052,7 +4052,7 @@
   "skill.cropProcessorUnit.buff": "-5% Masa pertumbuhan Mesin Tanaman",
   "skill.oilExtraction": "+1 Minyak semasa mengumpul dari rizab",
   "skill.leakProofTank": "Kapasiti tangki minyak tiga dalam mesin tanaman",
-  "skill.cropExtensionModule": "Benarkan biji Wortel dan Kubis digunakan dalam mesin tanaman",
+  "skill.cropExtensionModuleII": "Benarkan biji Wortel dan Kubis digunakan dalam mesin tanaman",
   "skill.rapidRig.buff": "-20% Masa pertumbuhan Mesin Tanaman",
   "skill.oilBeBack": "-20% Masa pengisian minyak",
   "skill.fieldExtensionModule": "+5 plot ditambah ke mesin",
