[FEAT] Reload after cancel all

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2582,7 +2582,8 @@
   "marketplace.youHaveHadSales": "Your item(s) sold while you were away!",
   "marketplace.offersWereAccepted": "One or more offers were accepted while you were away!",
   "marketplace.cancelListing": "Cancel Listing",
-  "marketplace.bulkCancel": "Cancel {{type}}",
+  "marketplace.bulkCancel": "Cancel all",
+  "marketplace.bulkCancel.label": "Cancel {{type}}",
   "marketplace.cancelListing.areYouSure": "Are you sure you want to cancel this listing?",
   "marketplace.bulkCancel.areYouSure": "Are you sure you want to cancel all {{type}}?",
   "marketplace.cancelListing.selectListing": "Please select the listing you want to cancel.",
