[CHORE] Update styling

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6158,8 +6158,8 @@
   "walletWall.connectingToWallet": "Connecting to wallet",
   "walletWall.connectLinkedWallet": "Connect your linked wallet",
   "walletWall.tryAnotherWallet": "Try another wallet",
-  "walletWall.linkedWalletNotConnected": "Your linked wallet is not connected.",
-  "walletWall.pleaseAcceptConnection": "Please accept the wallet connection request in your wallet.",
+  "walletWall.linkedWalletNotConnected": "Please connect your linked wallet to continue with this action.",
+  "walletWall.pleaseAcceptConnection": "Please accept the connection request in your wallet.",
   "walletWall.pleaseCheckWallet": "Please check your wallet for a signature request.",
   "walletWall.signMessage": "Sign Message",
   "walletWall.disconnect": "Disconnect",
