--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6172,5 +6172,19 @@
   "walletWall.connectError.userRejectedRequest": "The connection request was rejected. Please try again.",
   "walletWall.connectError.resourceUnavailable": "There is already a connection request in your wallet. Please accept it or try another wallet.",
   "walletWall.selectSpecificNetwork": "Please select {{network}} network to {{action}}",
-  "walletWall.selectANetwork": "Please select a network to {{action}}"
+  "walletWall.selectANetwork": "Please select a network to {{action}}",
+  "description.colorToken2025": "Use this in the easter event shop before the event ends!",
+  "description.colorTicket2025": "Hold this for a chance to win $FLOWER after the easter event ends!",
+  "description.paintBuckets": "These buckets hold the power to bring color to even the dullest day.",
+  "description.rainbowWell": "This enchanted well shimmers with every color of the rainbow, offering wishes as bright as its waters.",
+  "description.floatingToy": "This playful toy drifts through the air, spreading joy wherever the breeze takes it.",
+  "description.rainbowFlower": "This rare flower radiates with vibrant magic and never fades.",
+  "description.ponyToy": "Crafted with love and a sprinkle of magic, this tiny pony carries the spirit of every farmer’s dreams.",
+  "description.redSlimeBaloon": "Suspended in a ruby-red bubble, this mischievous slime squishes and squirms with excitement.",
+  "description.blueSlimeBaloon": "Gently bobbing in a cool blue balloon, this playful slime seems to enjoy the ride.",
+  "event.noticeboard.one": "Welcome to the Festival of Colors 2025 Event!",
+  "event.noticeboard.two": "In this island you can find a portal with a brand new minigame where you can earn Tokens to spend on special limited items!",
+  "event.noticeboard.three": "The shop uses a system similar to the Stella Shop, where you can unlock new items to buy after you buy items from the previous tiers. Also remember to buy as many event tickets as you can to have more chances to win $FLOWER!",
+  "event.noticeboard.four": "Since the way the game and event works are always changing, there is no direct donate NPC this time, but you can buy any of the items on the shop with $FLOWER or buy attempts at the Portal to support and help us continue to bring bigger, better and more amazing events like this!",
+  "event.noticeboard.five": "This is all thanks to you and your support! We from the community event team thank you all! Your feedback on the official Sunflower Land Discord Server is appreciated"
 }
