--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5993,6 +5993,10 @@
   "easter-eggstravaganza.portal.description": "Collect the eggs before they fall. Can you save the easter eggs?",
   "easter-eggstravaganza.portal.missionObjectives": "Mission: Reach {{targetScore}}.",
   "easter-eggstravaganza.portal.rewardMessage": "Congratulations, you completed the mission! Here is your reward.",
+  "festival-of-colors-2025.portal.title": "Minigame - Festival of Colors 2025",
+  "festival-of-colors-2025.portal.description": "How many balloons can you help us pop?",
+  "festival-of-colors-2025.portal.missionObjectives": "Mission: Reach {{targetScore}}.",
+  "festival-of-colors-2025.portal.rewardMessage": "Congratulations, you completed the mission! Here is your reward.",
   "maxPerPerson": "Max per player: {{max}}",
   "stream.beginsSoon": "Town Hall Starts In",
   "stream.isLive": "Town Hall is live!",
