Spelling mistake fix

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6184,8 +6184,8 @@
   "description.floatingToy": "This playful toy drifts through the air, spreading joy wherever the breeze takes it.",
   "description.rainbowFlower": "This rare flower radiates with vibrant magic and never fades.",
   "description.ponyToy": "Crafted with love and a sprinkle of magic, this tiny pony carries the spirit of every farmer’s dreams.",
-  "description.redSlimeBaloon": "Suspended in a ruby-red bubble, this mischievous slime squishes and squirms with excitement.",
-  "description.blueSlimeBaloon": "Gently bobbing in a cool blue balloon, this playful slime seems to enjoy the ride.",
+  "description.redSlimeBalloon": "Suspended in a ruby-red bubble, this mischievous slime squishes and squirms with excitement.",
+  "description.blueSlimeBalloon": "Gently bobbing in a cool blue balloon, this playful slime seems to enjoy the ride.",
   "event.noticeboard.one": "Welcome to the Festival of Colors 2025 Event!",
   "event.noticeboard.two": "In this island you can find a portal with a brand new minigame where you can earn Tokens to spend on special limited items!",
   "event.noticeboard.three": "The shop uses a system similar to the Stella Shop, where you can unlock new items to buy after you buy items from the previous tiers. Also remember to buy as many event tickets as you can to have more chances to win $FLOWER!",
