--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -1036,7 +1036,7 @@
   "description.bluemarlin.one": "蓝枪鱼。海洋的传奇，马林鱼，态度如深海般深邃。",
   "description.bluemarlin.two": "用这皇家级渔获引领你的胃口！",
   "description.oarfish.two": "划入传奇风味之旅！",
-  "description.footballfish.one": "灯笼鱼。深海的MVP，一颗随时一展身手的生物明星！",
+  "description.footballfish.one": "灯笼鱼。深海的 MVP，一颗随时一展身手的生物明星！",
   "description.footballfish.two": "在味蕾上攻入好球！",
   "description.sunfish.one": "太阳鱼。海洋中的日光浴爱好者，高举鳍片，享受着高光时刻。",
   "description.sunfish.two": "沐浴在它美味的光华中！",
@@ -3628,7 +3628,7 @@
   "time.ms.med": "ms",
   "time.mss.med": "mss",
   "time.millisecond.short": "ms",
-  "time.milliseconds.ago": "{{time}} {{millisecondORmilliseconds}} 之前",
+  "time.milliseconds.ago": "{{time}} {{millisecondORmilliseconds}} 前",
   "statements.mutant.animal": "恭喜，您发现了一只变种动物！",
   "competition.highscore": "最高分数",
   "competition.accumulator": "累计分数",
@@ -3981,7 +3981,7 @@
   "skill.zestyVibes.buff": "+1 番茄和柠檬产量",
   "skill.lumberjacksExtra": "+0.1 木头产量",
   "skill.treeCharge": "-10% 树木生长时间",
-  "skill.moreAxes": "补货时，+50 斧头（不包括免费补货）",
+  "skill.moreAxes": "增加补货库存：+50 斧头（不包括免费补货）",
   "skill.instaChop": "每棵树木砍伐只需单击 1 下",
   "skill.fellersDiscount": "-20% 斧头成本",
   "skill.moneyTree": "砍树时有 1% 的几率找到 200 枚金币",
@@ -4210,60 +4210,60 @@
   "bumpkinItemBuff.sunflorian.crown.boost.two": "+10% 徽记",
   "description.superTotem.boost.effectTime": "持续 7 天",
   "budBuff.type.saphiro.boost": "-10% 庄稼生长时间",
-  "description.tornadoPinwheel": "一款神奇的风车可以保护你免受龙卷风的侵害！仅限一次性使用。",
+  "description.tornadoPinwheel": "神奇风车，保护你免受龙卷风的侵害！仅供一次性使用。",
   "temperateSeason.weatherShop.weather": "天气",
-  "temperateSeason.weatherShop.buy.description": "购买物品以保护您的农场免受天气影响",
+  "temperateSeason.weatherShop.buy.description": "购买道具以保护您的农场免受天气影响",
   "tornado": "龙卷风",
-  "tornado.crops.destroyed": "龙卷风破坏",
-  "tornado.crops.destroyed.description": "龙卷风摧毁了你一半的庄稼。请等待龙卷风过去。",
-  "tornado.building.destroyed.description": "龙卷风正在席卷你的农场——这座建筑不安全！请等待龙卷风过去。",
-  "tornado.protected.one": "你保护了你的农场免受龙卷风的侵害！",
-  "tornado.protected.two": "你的庄稼都没有被摧毁。",
-  "tornado.protected.three": "你的建筑物都没有受到损坏。",
-  "tornado.destroyed.one": "哦不！龙卷风正在摧毁你的农场！",
-  "tornado.destroyed.two": "你的一些庄稼被摧毁了。",
-  "tornado.destroyed.three": "你的一些建筑物遭到破坏。",
-  "tornado.specialEvent": "特别活动 - 龙卷风",
-  "guide.factionPet.two": "你的阵营将有每周需要达到的目标经验值。如果派系达到目标，下周的目标将比前一周的目标高出 25%！如果未达到目标，它将重置回 1000 x 阵营成员。",
-  "flowerBedGuide.buySeeds": "从市场购买种子。",
-  "searchHere": "在这里搜索...",
-  "description.mangrove": "保护你免受海啸侵害的红树林！仅限一次性使用。",
+  "tornado.crops.destroyed": "被龙卷风破坏",
+  "tornado.crops.destroyed.description": "龙卷风摧毁了您一半的庄稼。请等待龙卷风过去。",
+  "tornado.building.destroyed.description": "龙卷风正在席卷您的农场——这座建筑不安全！请等待龙卷风过去。",
+  "tornado.protected.one": "您保护了您的农场免受龙卷风的侵害！",
+  "tornado.protected.two": "您的庄稼都没有被摧毁。",
+  "tornado.protected.three": "您的建筑物都没有遭到破坏。",
+  "tornado.destroyed.one": "哦不！龙卷风正在摧毁您的农场！",
+  "tornado.destroyed.two": "您的一些庄稼被摧毁了。",
+  "tornado.destroyed.three": "您的一些建筑物遭到破坏。",
+  "tornado.specialEvent": "特别事件 - 龙卷风",
+  "guide.factionPet.two": "您的帮派将有每周需要达到的目标经验值。如果帮派达成目标，下周的目标将比前一周的目标高出 25%！如果未达到目标，它将重置回 1000 x 帮派成员数的数值。",
+  "flowerBedGuide.buySeeds": "到市场购买种子。",
+  "searchHere": "在这里搜索……",
+  "description.mangrove": "保护您免受海啸侵害的红树林！仅供一次性使用。",
   "tsunami": "海啸",
-  "tsunami.crops.destroyed": "海啸的破坏",
-  "tsunami.crops.destroyed.description": "海啸摧毁了你一半的庄稼。请等待海啸过去。",
-  "tsunami.building.destroyed.description": "海啸正在席卷你的农场——这座建筑不安全！请等待海啸过去。",
-  "tsunami.protected.one": "你保护了你的农场免受海啸的侵害！",
-  "tsunami.protected.two": "你的庄稼都没有被摧毁。",
-  "tsunami.protected.three": "你的建筑物都没有受到损坏。",
-  "tsunami.destroyed.one": "哦不！海啸正在摧毁你的农场！",
-  "tsunami.destroyed.two": "你的一些庄稼被摧毁了。",
-  "tsunami.destroyed.three": "你的一些建筑物遭到破坏。",
+  "tsunami.crops.destroyed": "被海啸破坏",
+  "tsunami.crops.destroyed.description": "海啸摧毁了您一半的庄稼。请等待海啸过去。",
+  "tsunami.building.destroyed.description": "海啸正在席卷您的农场——这座建筑不安全！请等待海啸过去。",
+  "tsunami.protected.one": "您保护了您的农场免受海啸的侵害！",
+  "tsunami.protected.two": "您的庄稼都没有被摧毁。",
+  "tsunami.protected.three": "您的建筑物都没有遭到破坏。",
+  "tsunami.destroyed.one": "哦不！海啸正在摧毁您的农场！",
+  "tsunami.destroyed.two": "您的一些庄稼被摧毁了。",
+  "tsunami.destroyed.three": "您的一些建筑物遭到破坏。",
   "tsunami.specialEvent": "特别活动 - 海啸",
-  "season.vip.purchase": "购买 VIP 访问权限",
+  "season.vip.purchase": "购买 VIP 权限",
   "vip.1Month": "1 个月",
   "vip.3Months": "3 个月",
   "vip.2Years": "2 年",
   "vip.3Months.discount": "八折优惠",
   "vip.purchase.title": "确认购买",
-  "vip.purchase.confirm": "你确定要购买 {{name}} 的 VIP 访问权限吗？",
+  "vip.purchase.confirm": "您确定要购买 {{name}} 的 VIP 权限吗？",
   "vip.benefits": "福利",
-  "vip.oneYear.warning": "您已经拥有 1 年的 VIP 访问权限。",
-  "vip.access": "VIP 访问权限",
+  "vip.oneYear.warning": "您已经拥有 1 年的 VIP 权限。",
+  "vip.access": "VIP 权限",
   "vip.benefit.airdrop": "每月空投",
   "vip.benefit.expBoost": "10% 经验值提升",
   "vip.benefit.bonusDelivery": "额外送货和农活奖励",
   "vip.benefit.reputation": "{{points}} 声誉积分",
-  "vip.benefit.competition": "奖励比赛积分 + 更多！",
+  "vip.benefit.competition": "额外比赛积分 + 更多！",
   "gameOptions.notifications": "通知",
-  "gameOptions.notifications.updating": "更新设置",
+  "gameOptions.notifications.updating": "正在更新设置",
   "gameOptions.notifications.update": "更新设置",
-  "gameOptions.notifications.updated": "设置已更新",
+  "gameOptions.notifications.updated": "已更新设置",
   "gameOptions.notifications.notSupported": "不支持",
-  "time.milliseconds.in": "在 {{time}} {{millisecondORmilliseconds}}",
-  "time.seconds.in": "在 {{time}} {{secondORseconds}}",
-  "time.minutes.in": "在 {{time}} {{minuteORminutes}}",
-  "time.hours.in": "在 {{time}} {{hourORhours}}",
-  "time.days.in": "在 {{time}} {{dayORdays}}",
+  "time.milliseconds.in": "剩 {{time}} {{millisecondORmilliseconds}}",
+  "time.seconds.in": "剩 {{time}} {{secondORseconds}}",
+  "time.minutes.in": "剩 {{time}} {{minuteORminutes}}",
+  "time.hours.in": "剩 {{time}} {{hourORhours}}",
+  "time.days.in": "剩 {{time}} {{dayORdays}}",
   "fullMoon.specialEvent": "特别活动-满月",
   "sunflowerClock": "向日葵时钟",
   "days.mon": "周一",
@@ -4277,7 +4277,7 @@
   "calendar.events.fullMoon.title": "满月",
   "calendar.events.tsunami.title": "海啸",
   "calendar.events.unknown.title": "未知事件",
-  "calendar.events.unknown.description": "一股神秘的力量正在接近...它会带来财富还是毁灭？只有时间会证明一切。",
+  "calendar.events.unknown.description": "一股神秘的力量正在接近……它会带来福分还是毁灭？只能静待时间揭晓。",
   "season.spring": "春季",
   "season.summer": "夏季",
   "season.autumn": "秋季",
@@ -4285,30 +4285,30 @@
   "skill.treeTurnaround": "树木有 15% 的几率立即生长",
   "powerSkills.reason.insufficientItems": "物品不足",
   "powerSkills.fertiliser": "化肥技能",
-  "powerSkills.reason.insufficientFertiliser": "不足 {{fertiliser}}",
+  "powerSkills.reason.insufficientFertiliser": "{{fertiliser}} 不足",
   "powerSkills.reason.allPlotsFertilised": "所有地块都已施肥",
   "powerSkills.reason.allFruitPatchesFertilised": "所有的水果地都已施肥",
-  "powerSkills.reason.noCropsGrowing": "没有庄稼在生长",
-  "powerSkills.reason.noTreesRecovering": "没有树木能恢复",
-  "powerSkills.reason.noGreenhouseProduceGrowing": "没有温室庄稼在增长",
-  "powerSkills.reason.noBuildingsAreCooking": "没有建筑物在做饭",
-  "powerSkills.reason.noFlowersGrowing": "花坛里没有开花",
-  "powerSkills.reason.noOilreservesRefilling": "没有石油储备正在补充",
-  "greatFreeze.crops.frozen": "被霜冻所冻结",
+  "powerSkills.reason.noCropsGrowing": "没有正在生长的庄稼",
+  "powerSkills.reason.noTreesRecovering": "没有正在恢复的树木",
+  "powerSkills.reason.noGreenhouseProduceGrowing": "没有正在生长的温室庄稼",
+  "powerSkills.reason.noBuildingsAreCooking": "没有正在烹饪的建筑物",
+  "powerSkills.reason.noFlowersGrowing": "没有正在种植的花坛",
+  "powerSkills.reason.noOilreservesRefilling": "没有正在恢复的油田",
+  "greatFreeze.crops.frozen": "被霜冻冻结",
   "greatFreeze.description": "一场霜冻正在侵袭您的农场！",
   "greatFreeze.specialEvent": "特别活动 - 霜冻",
   "greatFreeze.protected.one": "您保护了您的农场免受霜冻伤害！",
   "greatFreeze.protected.two": "您的庄稼都没有被冻结。",
-  "greatFreeze.destroyed.one": "哦不！霜冻把您的农场給冻结了！",
+  "greatFreeze.destroyed.one": "哦不！霜冻把您的农场冻结了！",
   "greatFreeze.destroyed.two": "您的一些庄稼被冻结了。",
   "calendar.events.greatFreeze.title": "霜冻",
-  "calendar.events.greatFreeze.description": "一场毁灭性的寒流，使部分庄稼被冻结了。",
-  "description.basic.scarecrow.boost.skill": "-30% 增长时间",
+  "calendar.events.greatFreeze.description": "一场毁灭性的霜冻，部分庄稼被冻结了。",
+  "description.basic.scarecrow.boost.skill": "-30% 生长时间",
   "description.scary.mike.boost.skill": "+0.3 中阶庄稼",
   "description.laurie.chuckle.crow.boost.skill": "+0.3 高阶庄稼",
-  "skill.chonkyScarecrow": "将基础稻草人的效果区域 (AOE) 增加到 7x7 区域；低阶庄稼生长时间额外增加 -10%",
-  "skill.horrorMike": "将 Scary Mike 的效果区域 (AOE) 增加到 7x7 区域；中阶庄稼产量增加 +0.1",
-  "skill.lauriesGains": "将 Chuckle Crow Laurie 的效果区域 (AOE) 增加到 7x7 区域；额外增加 +0.1 高阶庄稼产量",
+  "skill.chonkyScarecrow": "将 Basic Scarecrow 的效果区域 (AOE) 增加到 7x7 区域；低阶庄稼生长时间额外 -10%",
+  "skill.horrorMike": "将 Scary Mike 的效果区域 (AOE) 增加到 7x7 区域；中阶庄稼产量额外 +0.1",
+  "skill.lauriesGains": "将 Chuckle Crow Laurie 的效果区域 (AOE) 增加到 7x7 区域；高阶庄稼产量额外 +0.1",
   "skill.fishyFortune": "+100% 来自 Corale 送货的金币",
   "skill.midasSprint": "-10% 金脉恢复时间",
   "skill.midasRush": "-20% 金脉恢复时间",
@@ -4404,16 +4404,16 @@
   "reputation.unlock.level": "达到 100 级-{{points}} 积分",
   "reputation.unlock.level15": "达到 15 级-{{points}} 点积分",
   "reputation.unlock.bud": "拥有一个蕾芽-{{points}} 积分",
-  "reputation.unlock.vip": "VIP 访问权限-{{points}} 积分",
+  "reputation.unlock.vip": "VIP 权限-{{points}} 积分",
   "reputation.vip.purchase": "购买 VIP 通行证",
   "reputation.sprout": "发芽",
   "reputation.seedling": "幼苗",
   "reputation.grower": "种植者",
   "reputation.cropkeeper": "农场管理员",
-  "reputation.cropkeeper.resources": "撤回资源",
-  "reputation.grandHarvester": "大收割机",
+  "reputation.cropkeeper.resources": "提取资源",
+  "reputation.grandHarvester": "大收割者",
   "reputation.grandHarvester.description": "和 Tywin 共进晚餐",
-  "reputation.grandHarvester.resources": "撤回资源",
+  "reputation.grandHarvester.resources": "提取资源",
   "reputation.grower.auctions": "拍卖权限",
   "reputation.marketplace.trades": "提高您的声誉以解锁更多交易。",
   "verify.verified": "您已通过验证！",
@@ -4424,8 +4424,8 @@
   "description.nightshade.emblem": "对于夜影派系的玩家来说，这是一个强大的标志。",
   "active": "活跃",
   "lavaPit.active": "活跃",
-  "lavaPit.burning": "燃燒中",
-  "lavaPit.collect": "領取",
+  "lavaPit.burning": "燃烧中",
+  "lavaPit.collect": "领取",
   "lavaPit.throw": "把资源扔进岩浆池",
   "lavaPit.description": "岩浆池将资源变成黑曜石。每个季节的要求都有所不同。",
   "chumDetails.wildMushroom": "嗯，这肯定能给我带来一些东西！",
@@ -4602,7 +4602,7 @@
   "orderhelp.New.Season": "新的篇章即将到来，章节票券送货将暂时关闭。",
   "season.free.season.passes": "免费章节旗帜",
   "season.free.season.passes.description": "获得每个章节的旗帜",
-  "season.vip.access": "章节 VIP 访问权限",
+  "season.vip.access": "章节 VIP 权限",
   "whatsOn.seasonCompetition": "分会竞赛",
   "bounties.sell.animal.sick": "嗯，我看见这只可怜的动物生病了。我还是会把它们从你手中买走，但我得给你一笔较低的赏金。成交？",
   "description.basic.scarecrow": "增益附近的低阶庄稼。",
@@ -5094,8 +5094,8 @@
   "skillReset.reduceOilInTank": "在重置之前，请记得减少油箱中的机油",
   "skillCategory.islands": "{{island}} 技能",
   "powerSkills.reason.animalsNotAsleep": "您所有的动物都没有在睡觉",
-  "time.ago": "{{time}} 之前",
-  "time.in": "还剩 {{time}}",
+  "time.ago": "{{time}} 前",
+  "time.in": "剩 {{time}}",
   "whatsOn.april28th": "4 月 28 日",
   "error.recipeNotReady": "还没有准备好食谱",
   "error.noAvailableSlots": "没有可用的插槽",
@@ -5112,7 +5112,7 @@
   "recipes.confirmCancel": "你确定要从队列中删除这个 {{recipe}} 吗？",
   "marketplace.higherThanOffer": "价格必须高于最高报价：{{price}}。",
   "marketplace.dodgyTrades": "玩家之间的来回交易可能会被标记为可疑。",
-  "vip.benefit.cookingQueue": "在烹饪大楼里排队食谱",
+  "vip.benefit.cookingQueue": "启用烹饪建筑中的队列功能",
   "restrictionReason.hasBonusAnimals.barn": "谷仓",
   "restrictionReason.hasBonusAnimals.henHouse": "鸡舍",
   "description.igloo": "外面很冷，里面很舒服——家的甜蜜冰冻家。在<风云变幻>章节中，来自 “送货、农活和赏金” 的 +1 “时光裂片”。",
@@ -5162,7 +5162,7 @@
   "chore.harvest.yam.30": "收获山药 30 次",
   "chore.harvest.yam.60": "收获山药 60 次",
   "chore.harvest.yam.90": "收获山药 90 次",
-  "ronin.nft.perkOne": "VIP 访问权限（2025 年 2 月 1 日之后创建的农场）",
+  "ronin.nft.perkOne": "VIP 权限（2025 年 2 月 1 日之后创建的农场）",
   "news.flower.launch": "$FLOWER 发布会",
   "news.flower.launch.description": "Sunflower Land 即将推出新的$ERC20。了解新实用程序以及如何赚钱。",
   "news.ronin.network": "Ronin 网络",
@@ -5193,7 +5193,7 @@
   "rocketman.flower.eligible": "Polygon、Ronin 和 BASE 用户符合资格。",
   "marketplace.listing.failure.tradeNotFound": "未找到交易",
   "bountyType.label": "{{type}} 赏金",
-  "ronin.nft.activates": "您的 VIP 访问权限将在 3 天后激活。",
+  "ronin.nft.activates": "您的 VIP 权限将在 3 天后激活。",
   "select.player": "选择玩家",
   "skill.toughTree": "获得 x3 木材产量的几率为 1/10",
   "reputation.tiers": "等级",
@@ -5953,37 +5953,37 @@
   "deposit.flower.depositFromLinkedWallet": "关联钱包",
   "deposit.flower.otherWallet": "其他钱包",
   "deposit.flower.": "从其他钱包存入",
-  "mine-whack.portal.title": "小游戏-Mine Whack",
-  "mine-whack.portal.description": "在这场反射挑战中，点击鼹鼠，躲避兔子，与时间赛跑！",
+  "mine-whack.portal.title": "小游戏-打矿鼠",
+  "mine-whack.portal.description": "在这场反应比拼里，敲击鼹鼠、避开兔子，与时间赛跑吧！",
   "mine-whack.portal.missionObjectives": "任务：达到 {{targetScore}} 点数。",
-  "mine-whack.portal.rewardMessage": "恭喜，你完成了任务！这是你的奖励。",
-  "portal.mineWhack.title": "我的 Wack",
-  "portal.mineWhack.description": "在这场反射挑战中，点击鼹鼠，躲避兔子，与时间赛跑！",
-  "blessing.donated": "{{amount}} x {{item}} 已捐赠",
-  "blessing.winners": "{{count}} 获胜者",
-  "blessing.maxAmount": "不足 {{name}}。",
+  "mine-whack.portal.rewardMessage": "恭喜，您完成了任务！这是您的奖励。",
+  "portal.mineWhack.title": "打矿鼠",
+  "portal.mineWhack.description": "在这场反应比拼里，敲击鼹鼠、避开兔子，与时间赛跑吧！",
+  "blessing.donated": "{{amount}} x {{item}} 已奉献",
+  "blessing.winners": "{{count}} 蒙恩者",
+  "blessing.maxAmount": "{{name}} 不足。",
   "wallet.seedlingRequired": "获得幼苗声誉即可铸造农场 NFT",
-  "reputation.seedling.farmNFT": "链上农场",
-  "reputation.seedlingRequired": "需要幼苗",
+  "reputation.seedling.farmNFT": "区块链农场",
+  "reputation.seedlingRequired": "需要幼苗声誉等级",
   "stream.isLive": "市政厅上线了！",
   "marketplace.label.pricePerUnit": "每单位价格",
-  "proof.of.humanity.required": "需要人性证明",
-  "reputation.notAReputation": "你不是 {{name}}",
+  "proof.of.humanity.required": "需要真人验证",
+  "reputation.notAReputation": "声誉未达到 {{name}}",
   "failed": "失败",
   "marketplace.bulkCancel": "全部取消",
   "marketplace.bulkCancel.label": "取消 {{type}}",
   "marketplace.bulkCancel.areYouSure": "您确定要取消所有 {{type}} 吗？",
   "marketplace.bulkCancel.success": "您的 {{type}} 已取消。",
-  "marketplace.bulkCancel.allFailed": "您的 {{type}} 无法取消。这通常发生在销售进行中。如果您仍然看到 {{type}}，请重试。",
-  "marketplace.bulkCancel.someSuccess": "您的 {{type}} 中的一部分已被取消，但有些无法取消。这通常发生在销售进行中。如果您仍然看到 {{type}}，请重试。",
-  "marketplace.bulk.listings.cancelling": "取消您的房源",
+  "marketplace.bulkCancel.allFailed": "您的 {{type}} 无法取消。这通常意味着交易正在进行。如果您仍然看到 {{type}}，请重试。",
+  "marketplace.bulkCancel.someSuccess": "您 {{type}} 中的一部分已被取消，但有些无法取消。这通常意味着交易正在进行。如果您仍然看到 {{type}}，请重试。",
+  "marketplace.bulk.listings.cancelling": "取消您的挂单",
   "partial.success": "部分成功",
   "there.was.a.problem": "出现了问题",
   "marketplace.bulk.offers.cancelling": "取消您的报价",
-  "assigning.nft": "铸造 NFT...",
-  "assigning.nft.success": "NFT 成功铸造！",
+  "assigning.nft": "NFT 铸造中……",
+  "assigning.nft.success": "成功铸造 NFT！",
   "assigning.nft.failed": "未能铸造 NFT。请再试一次。",
-  "linking.wallet": "正在链接钱包...",
+  "linking.wallet": "正在关联钱包……",
   "linking.wallet.success": "钱包已成功关联！",
   "linking.wallet.failed": "无法关联钱包。请再试一次。",
   "walletWall.showMore": "显示更多",
@@ -6001,8 +6001,8 @@
   "walletWall.connectError.alreadyConnected": "您已经连接到这个钱包。请断开连接并重试。",
   "walletWall.connectError.userRejectedRequest": "连接请求被拒绝。请重试。",
   "walletWall.connectError.resourceUnavailable": "您的钱包中已经有连接请求。请接受或尝试使用其他钱包。",
-  "walletWall.selectSpecificNetwork": "请选择 {{network}} 网络到 {{action}}",
-  "walletWall.selectANetwork": "请选择一个网络到 {{action}}",
+  "walletWall.selectSpecificNetwork": "请选择 {{network}} 网络以进行 {{action}}",
+  "walletWall.selectANetwork": "请选择一个网络以进行 {{action}}",
   "cropMachine.noSeeds": "没有可用的种子",
   "skill.cropExtensionModuleI": "允许在作物机中使用大黄和西葫芦种子",
   "skill.cropExtensionModuleIII": "允许在作物机中使用山药和西兰花种子"
