[FEAT] Blessing touchups

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -6118,8 +6118,10 @@
   "blessing.thankYouOffering": "Thank you for your offering devoted one. The guardians smile upon you, patience is now key. Wait until a new day to receive your blessing.",
   "blessing.left": "left",
   "blessing.youHaveBeenBlessed": "You have been blessed",
-  "blessing.godsThankFaithful": "The gods thank the faithful.",
-  "blessing.claimBlessing": "Claim Blessing",
+  "blessing.godsThankFaithful": "The gods have rewarded you for your blessing.",
+  "blessing.claimBlessing": "View results",
+  "blessing.random": "Rewards are distributed randomly.",
+  "blessing.claim": "Claim your prize",
   "blessing.greetings": "Greetings farmer...you have stumbled upon divinity. Are you worthy of a blessing?",
   "blessing.seasonBlooming": "{{season}} is blooming. Will you show your faith in the Gods?",
   "blessing.areYouSure": "Are you sure?",
@@ -6127,9 +6129,10 @@
   "blessing.offeringWarning": "Offerings are donations to the Guardians and will be burnt. No rewards are guaranteed.",
   "blessing.confirm": "Confirm",
   "blessing.offerTitle": "Offer a Blessing",
-  "blessing.guardiansSeek": "Every day, the Guardians seek an offering. Show your faith, for the chance to gain a blessing.",
+  "blessing.guardiansSeek": "Every day, the Guardians seek an offering. Show your faith, for the chance to receive Love Charms - rewards are distributed randomly.",
   "blessing.chooseAmount": "Choose your {{name}} amount",
   "blessing.minimumRequired": "Minimum {{amount}} required",
+  "blessings.results": "Blessing results",
   "blessing.offer": "Offer",
   "seeking.blessing": "Claiming blessing",
   "seeking.blessing.success": "Congratulations, you have received a blessing!",
