[FIX] Use Current Chapter Ticket for What's On section

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4991,7 +4991,7 @@
   "description.toxic.tuft": "A mutated sheep whose toxic fleece produces the finest merino wool in the land!",
   "description.mootant": "This genetically enhanced bovine here to boost your leather production!",
   "description.cropCircle": "A mysterious circle that appears on your farm...what could it mean?",
-  "whatsOn.auction.tickets": "No timeshards from chores and bounties this week.",
+  "whatsOn.auction.tickets": "No {{ticket}} from chores and bounties this week.",
   "description.cheese": "A delicious dairy delight made from fresh milk",
   "description.pizzaMargherita": "A classic Italian pizza with tomatoes and cheese",
   "description.rhubarb.tart": "A sweet and tangy tart featuring fresh rhubarb",
@@ -5663,7 +5663,7 @@
   "recipes.confirmAddToQueue": "Are you sure you want to add {{recipe}} to the queue?",
   "whatsOn.ticketsEnd": "No more Geniseeds",
   "whatsOn.april28th": "April 28th",
-  "whatsOn.ticketPaused": "The Bumpkins are on holidays - No more Geniseeds from chores & bounties.",
+  "whatsOn.ticketPaused": "The Bumpkins are on holidays - No more {{ticket}} from chores & bounties.",
   "whatsOn.mysterySeasonText2": "No more timeshards from deliveries.",
   "whatsOn.mysterySeasonText3": "No more ancient clocks while digging.",
   "polygon.required": "Polygon Required",
