[FEAT] Potion House leverage

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3300,9 +3300,13 @@
   "reward.woohoo": "Woohoo! You found a hidden reward.",
   "reward.connectWeb3Wallet": "Connect a Web3 Wallet for a daily reward.",
   "reward.factionPoints": "Earn glory for your faction!",
+  "reward.maxReward": "Max Reward:",
+  "reward.congratulations": "Congratulations! You won {{reward}} points!",
+  "reward.whoops": "Whoops! better luck next time!",
   "rules.gameStart": "At the beginning of the game, the plant will randomly pick a combination of 4 potions and 1 'chaos' potion. The combination can be all different or all the same.",
   "rules.chaosPotionRule": "If you add the 'chaos' potion your score for that attempt will be 0.",
   "rules.potion.feedback": "Select your potions and unveil the secrets of the plants!",
+  "potion.multiplier": "Multiplier:",
   "BloomBoost.description": "Ignite your plants with vibrant blooms!",
   "DreamDrip.description": "Drizzle your plants with magical dreams and fantasies.",
   "EarthEssence.description": "Harness the power of the earth to nurture your plants.",
